--- a/WarrantyLookupService/project.json
+++ b/WarrantyLookupService/project.json
@@ -1,43 +1,45 @@
 {
   "version": "1.0.0-*",
   "description": "WarrantyLookupService Console Application",
-  "authors": [ "" ],
-  "tags": [ "" ],
+  "authors": [
+    ""
+  ],
+  "tags": [
+    ""
+  ],
   "projectUrl": "",
   "licenseUrl": "",
-
-
   "configurations": {
     "Debug": {
       "compilationOptions": {
-        "define": [ "DEBUG", "TRACE" ]
+        "define": [
+          "DEBUG",
+          "TRACE"
+        ]
       }
     },
     "Release": {
       "compilationOptions": {
-        "define": [ "RELEASE", "TRACE" ],
+        "define": [
+          "RELEASE",
+          "TRACE"
+        ],
         "optimize": true
       }
     }
   },
-
-
   "compilationOptions": {
     "emitEntryPoint": true
   },
-
   "tooling": {
     "defaultNamespace": "WarrantyLookupService"
   },
-
   "dependencies": {
     "Newtonsoft.Json": "6.0.6"
   },
-
   "commands": {
     "WarrantyLookupService": "WarrantyLookupService"
   },
-
   "frameworks": {
     "dnx46": {
       "dependencies": {
