--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "electron-testapp",
+  "name": "lanamark-lenovo-support",
   "version": "1.0.0",
   "description": "A Lenovo support test app",
   "main": "main.js",
@@ -9,6 +9,7 @@
   "author": "Anton Abyzov",
   "license": "WTFPL",
   "devDependencies": {
+    "electron-packager": "^7.0.1",
     "electron-prebuilt": "^0.37.0"
   },
   "dependencies": {
